헤더 고정 기능, 메인 배너 슬라이드

--- a/css/main/sw-card.css
+++ b/css/main/sw-card.css
@@ -8,7 +8,7 @@
 .sw-card .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #444;
+  background: red;
   display: flex;
   justify-content: center;
   align-items: center;
