--- a/css/header/header.css
+++ b/css/header/header.css
@@ -123,7 +123,27 @@
   /* align-items: center; */
 }
 .gnb ul li {
+  position: relative;
 }
+
+.gnb ul li::after {
+  content: "";
+  position: absolute;
+  top: 82px;
+  left: 50%;
+  transform: translateX(-50%);
+  transform-origin: center;
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #0b0d0f;
+  transition: all 0.3s;
+}
+
+.gnd ul li:hover::after {
+  width: 100%;
+}
+
 .gnb ul li a {
   height: 100%;
   padding: 0 0.8rem;
