--- a/css/main/main.css
+++ b/css/main/main.css
@@ -16,12 +16,20 @@
 }
 .main-left {
   position: relative;
-  width: 776px;
+  width: 100%;
+  max-width: 776px;
 }
+
+.main-right {
+  position: relative;
+  width: 335px;
+}
+
 /* 로그인 메뉴 모바일 */
 .login-wrap-mb {
   display: none;
 }
+
 /* 자주찾는 메뉴 모바일 */
 .shortcut-wrap-mb {
   display: none;
@@ -127,9 +135,74 @@
 .side-banner-wrap-mb {
   display: none;
 }
+
 .main-right {
   position: relative;
   width: 335px;
+}
+.login-wrap {
+  position: relative;
+  padding: 3rem 2rem 2rem;
+  background-color: #fff;
+  border-radius: 2rem;
+  border: 1px solid #e5e5e8;
+}
+
+.login-wrap {
+  position: relative;
+  padding: 3rem 2rem 2rem;
+  background-color: #fff;
+  border-radius: 2rem;
+  border: 1px solid #e5e5e8;
+}
+
+.login-wrap .hello {
+  position: relative;
+  padding: 0 0.4rem;
+  margin-bottom: 2rem;
+  display: flex;
+  gap: 0.8rem;
+}
+.login-wrap .hello img {
+  width: 28px;
+  height: 28px;
+}
+.login-wrap .hello span {
+  font-family: "SS-bold";
+  font-size: 1.8rem;
+  line-height: 3rem;
+}
+
+.login-wrap .btn {
+  position: relative;
+  padding: 0 0 0.6rem;
+}
+
+.login-wrap .btn a {
+  padding: 1.3rem 1.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #0068ff;
+  font-family: "SS-bold";
+  font-size: 1.8rem;
+  color: #fff;
+  border-radius: 1.2rem;
+  line-height: 2rem;
+}
+
+.login-wrap .etc {
+  position: relative;
+  margin-top: 2.4rem;
+  padding-bottom: 1rem;
+}
+
+.login-wrap .etc li {
+}
+
+.login-wrap .etc li:last-child {
+  padding-left: 2.5rem;
+  border-left: 1px solid #868a93;
 }
 
 .login-wrap {
@@ -146,8 +219,17 @@
   flex-direction: column;
   gap: 2rem;
 }
-
 .side-banner-wrap {
   position: relative;
   margin-top: 3rem;
+}
+
+@media screen and (max-width: 1219px) {
+  .main-left {
+    width: 100%;
+    max-width: 100%;
+  }
+  .main-right {
+    display: none;
+  }
 }
